--- a/home/template/index.html
+++ b/home/template/index.html
@@ -16,7 +16,9 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h4>hello world ! nguyen huu phi .... anh da den the gioi nay !</h4>      
+        <h4>hello world ! nguyen huu phi .... anh da den the gioi nay !</h4>  
+        <h6>Ok men </h6>
+        <h6> Ok github</h6>    
         <script src="" async defer></script>
     </body>
 </html>
