Thêm tính năng đăng nhập và cập nhật CSS

--- a/home/template/index.html
+++ b/home/template/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng Nhập</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <script src="{% static 'index.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <script src="{% static 'js/index.js' %}"></script>
 </head>
 <body>
 
