--- a/home/template/index.html
+++ b/home/template/index.html
@@ -13,24 +13,28 @@
 <div class="login-container">
    
     <div class="header">
-            Login Information
+           Thông tin đăng nhập
     </div>
 
     <form action="{% url 'login_page' %}" method="POST">
         {% csrf_token %}
         <div class="form-group">
-            <label for="username">Username</label>
+            <label for="username">Tài khoản</label>
             <input type="text" id="username" name="username">
         </div>
         <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">Mật khẩu</label>
             <input type="password" id="password" name="password">
         </div>
         <div class="form-group remember-me">
-            <input type="checkbox" id="remember-me" name="remember-me">
-            <label for="remember-me">Remember login</label>
+            <input type="checkbox" id="remember" name="remember">
+            <label for="remember">Lưu thông tin đăng nhập?</label>
         </div>
-        <button type="submit" class="btn">Login</button>
+        
+        <div class="button-group">
+                <button type="submit" class="btn">Đăng nhập</button>
+                <button type="button" class="btn secondary" id="toggleAuth">Đăng ký</button>
+            </div>
     </form>
 </div>
 
