--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -27,7 +27,8 @@
                 {% endfor %}
             {% endif %}
         </form>
-        <p>Chưa có tài khoản? <a href="{% url 'register' %}">Đăng ký ngay</a></p>
+        <p style="text-align: center;">Chưa có tài khoản? <a href="{% url 'register' %}">Đăng ký ngay</a></p>
+        
     </div>
 </body>
 </html>
